# mc-server-python

./: .gitignore  LICENSE  README.md  license  main.py  setup.cfg  setup.py
src/mc_server_python/: __main__.py  main.py
src/mc_server_setup/: __main__.py  main.py
