[metadata]
name = mc-server-setup
version = 1.2.6
url = https://github.com/Yot360/mc-server-python
download_url = https://github.com/Yot360/mc-server-python
project_urls =
    Bug Tracker = https://github.com/Yot360/mc-server-python/issues
author =  Yot360
author_email = 65982248+yot360@users.noreply.github.com
maintainer = Yot360
maintainer_email = 65982248+yot360@users.noreply.github.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Games/Entertainment
    Topic :: Utilities

license = MIT
license_files = license
description = A Minecraft server setup script made using python3
long_description = file: README.md
long_description_content_type = text/markdown
keywords = minecraft
platform = Linux, MacOS, Windows


[options]
zip_safe = false
install_requires =
    progressbar>=2.5
    pyngrok>=5.0.5
;extras_require =
python_requires = >=3.6
entry_points =
    [console_scripts]
    mc_server_setup = mc_server_setup.__main__:cli
;scripts =
;eager_resources =
;tests_require =
include_package_data = true
packages =
    mc_server_setup
package_dir =
    = src
;package_data =
;exclude_package_data =
;namespace_packages =
;py_modules =
